--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "fastify": "^3.25.3",
+    "fastify": "^3.25.0",
     "fastify-formbody": "^5.2.0",
     "fastify-static": "^4.5.0",
     "handlebars": "^4.7.7",
-    "point-of-view": "^5.0.0"
+    "got": "^11.8.2",
+    "point-of-view": "^4.16.0"
   },
   "engines": {
     "node": "12.x"
